--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootswatch_theme.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.0.js"></script>
     <script src="js/scripts.js"></script>
@@ -13,8 +13,8 @@
     <hr>
         <div class = 'row'>
             <div class = 'col-md-3'>
-                <button id="start" class="btn btn-primary">Start</button><br><br>
-                <button id="stop" class="bnt btn-info">End</button>
+                <button id="start" class="btn btn-primary">Start</button>
+                <button id="pause" class="bnt btn-info">End</button>
             </div>
             <div class='col-md-7'>
                 <table id="universe"></table>
