add New Game feature

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <hr>
         <div class = 'row'>
             <div class = 'col-md-3'>
-                <button id="start" class="btn btn-primary">Start</button>
-                <button id="pause" class="bnt btn-info">End</button>
+                <button id="start" class="btn btn-primary">Start</button><br><br>
+                <button id="pause" class="bnt btn-info">Pause</button><br><br>
+                <button id="game-over" class="btn btn-danger">New Game</button>
             </div>
             <div class='col-md-7'>
                 <table id="universe"></table>
