--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
     <script src="js/jquery-1.11.0.js"></script>
     <script src="js/scripts.js"></script>
     <title>Conway's Game of Life</title>
@@ -13,9 +14,9 @@
     <hr>
         <div class = 'row'>
             <div class = 'col-md-3'>
-                <button id="start" class="btn btn-primary">Start</button><br><br>
-                <button id="pause" class="bnt btn-info">Pause</button><br><br>
-                <button id="game-over" class="btn btn-danger">New Game</button>
+                <button id="start" class="btn">Start</button><br><br>
+                <button id="pause" class="btn">Pause</button><br><br>
+                <button id="game-over" class="btn">New Game</button>
             </div>
             <div class='col-md-7'>
                 <table id="universe"></table>
